examples/test_package/Double_dc_full/steps/benchzebra_precise_run3/#test_analysis_2_result.txt
### Evaluation Report: Zebra Puzzle in ProbLog

---

#### **1. Document Title**
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**
The Zebra Puzzle is a classic logic puzzle where the goal is to determine the correct arrangement of houses based on a set of given constraints. This report evaluates the implementation of the puzzle in ProbLog, focusing on logical correctness, test results, and adherence to the specified requirements.

---

#### **3. Test Results Summary**
The provided code fails during execution with the following error:
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```

**Failed Queries:**
- The query `zebra(Houses)` fails because the predicate `member/2` is not defined in the provided code.

---

#### **4. Failure Localization**
- **Failed Predicate:** `member/2`
- **Code Location:** Line 4 (where `member` is first used).
- **Issue:** The predicate `member/2` is called but not defined in the code. The error indicates that ProbLog cannot find any clauses for `member/2`.

**Expected vs. Actual:**
- **Expected:** The `member/2` predicate should be defined to check if an element is a member of a list.
- **Actual:** The predicate is missing, causing the evaluation to fail.

---

#### **5. Root Cause Analysis**
- **Logical Correctness:** The logic of the puzzle is correctly implemented in the constraints, but the missing `member/2` predicate prevents execution.
- **Recursive Termination:** The recursive predicates `right_of/3` and `next_to/3` are correctly defined and should terminate properly.
- **Probabilistic Rules:** Not applicable here, as the puzzle is purely logical (no probabilistic facts or neural network integration).

**Missing Definitions:**
- The `member/2` predicate is essential for checking list membership. Without it, the constraints involving `member` cannot be evaluated.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The constraints are correctly specified, but the missing `member/2` predicate prevents full execution.
  - **Probabilistic Reasoning:** Not applicable (no probabilistic facts).
  - **Neural Network Integration:** Not used (DeepProbLog feature not used).

- **Edge Cases:**
  - The code assumes valid input (a list of 5 houses). Non-list input or incorrect house structures would cause errors.
  - Recursive predicates (`right_of/3`, `next_to/3`) are correctly defined and should handle edge cases like empty lists.

---

#### **7. Error Summary**

| Number | Problem                     | Impact                          | Suggestion                          |
|--------|-----------------------------|---------------------------------|-------------------------------------|
| 1      | Missing `member/2` predicate | Entire puzzle cannot be solved  | Define `member/2` or use built-in.  |

---

### **Suggested Fix**
Add the following definition for `member/2` to the code:
```prolog
member(X, [X|_]).
member(X, [_|T]) :- member(X, T).
```

Alternatively, if ProbLog provides a built-in `member/2`, ensure it is imported or referenced correctly.

---

### **Conclusion**
The Zebra Puzzle implementation is logically sound but fails due to the missing `member/2` predicate. Once this is resolved, the puzzle should execute correctly, adhering to all specified constraints. No probabilistic or DeepProbLog features are used in this implementation.